# Unity_Cuda_Test

./: README.md  Unity_Cuda_Test.sln  debug_decompress.txt  error_log.txt
Assets/Materials/: Depth_Mat.mat
Assets/Plugins/: Cuda_Interop.exp
Assets/Plugins/Windows/: Cuda_Interop.lib
Assets/Prefabs/: SubCamera.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: ContentCamera.cs  CudaInterop.cs  GameManager.cs  SceneLoader.cs
Assets/Shaders/: depth.shader
Assets/Textures/: Output.renderTexture
Cuda_Interop/: Cuda_Interop.sln
Cuda_Interop/Cuda_Interop/: CMakeLists.txt  Cuda_Interop.vcxproj  Cuda_Interop.vcxproj.filters  Makefile  cuda_interop.cu  cuda_interop.h
Cuda_Interop/Cuda_Interop/nvcomp/nvcomp/: cascaded.h
Cuda_Interop/Cuda_Interop/x64/Debug/: Cuda_Interop.dll.recipe  Cuda_Interop.ilk  cuda_interop.cu.cache  cuda_interop.cu1938613305.deps
Cuda_Interop/Cuda_Interop/x64/Debug/Cuda_Interop.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Cuda_Interop.lastbuildstate  Cuda_Interop.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Cuda_Interop/Cuda_Interop/x64/Release/: Cuda_Interop.dll.recipe  cuda_interop.cu.cache  cuda_interop.cu1128002615.deps  cuda_interop.cu1938613305.deps
Cuda_Interop/Cuda_Interop/x64/Release/Cuda_Interop.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Cuda_Interop.lastbuildstate  Cuda_Interop.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ProjectSettings/: ProjectSettings.asset
UserSettings/Layouts/: default-2021.dwlt
(+3 files in other folders)
